# WaterMarkPy

./: .gitignore  LICENSE  README.md  main.py  pylintrc  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
requirements/: ci.in  ci.txt  dev.in  dev.txt
src/watermarkpy/: watermark.py
src/watermarkpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/watermarkpy/commands/: image.py
tests/: test_watermark.py
