[metadata]
name = watermarkpy
version = 0.9.0
author = Victor Carlquist
author_email = victorcarlquist@gmail.com
description = Add watermark in one or multiple images at once.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VictorCarlquist/WaterMarkPy
project_urls =
    Bug Tracker = https://github.com/VictorCarlquist/WaterMarkPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = watermarkpy
python_requires = >=3.7
