[metadata]
name = watermarkpy-image
version = 0.9.1
author = Victor Carlquist
author_email = victorcarlquist@gmail.com
description = Add watermark-image in one or multiple images at once.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VictorCarlquist/WaterMarkPy
project_urls =
    Bug Tracker = https://github.com/VictorCarlquist/WaterMarkPy/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = watermarkpy-image
python_requires = >=3.7

[options.entry_points]
console_scripts =
    watermarkpy-image = watermarkpy.scripts.image:main
